# ChangeLog for gnustep-base/gnustep-base
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.31 2006/06/04 12:58:53 grobian Exp $

  04 Jun 2006; Fabian Groffen <grobian@gentoo.org>
  -files/base-path.patch-gsstartup-0.10.2,
  -files/base-user-defaults.patch-1.10.2_pre20050312,
  +files/gnustep-base-1.12.0-obey_homedir.patch, gnustep-base-1.12.0.ebuild:
  Adding a patch for 1.12.0 to obey HOME env variable, which allows it to get
  out of package.mask.  Removed some stray files.

*gnustep-base-1.12.0 (19 Mar 2006)

  19 Mar 2006; Fabian Groffen <grobian@gentoo.org>
  -gnustep-base-1.10.2_pre20050312.ebuild, -gnustep-base-1.10.2.ebuild,
  -gnustep-base-1.10.2-r1.ebuild, +gnustep-base-1.12.0.ebuild:
  Version bump to 1.12.0.  Marked ~ppc-macos.  Removed old and CVS based versions

  26 Dec 2005; Simon Stelling <blubb@gentoo.org> gnustep-base-1.10.3.ebuild:
  stable on amd64

  14 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  gnustep-base-1.10.3.ebuild:
  Stable on ppc.

*gnustep-base-1.10.3-r1 (22 Jun 2005)

  22 Jun 2005; Armando Di Cianno <fafhrd@gentoo.org>
  +gnustep-base-1.10.3-r1.ebuild:
  Added optional dependency for ffcall -- prefer ffcall over libffi; gnustep
  user of libffi is buggy

  09 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gnustep-base-1.10.3.ebuild:
  Stable on sparc

  06 Jun 2005; Armando Di Cianno <fafhrd@gentoo.org>
  gnustep-base-1.10.3.ebuild:
  Stabilizations and bumps for core gnustep ebuilds.

  05 May 2005; Sven Wegener <swegener@gentoo.org>
  gnustep-base-1.10.1-r1.ebuild, gnustep-base-1.10.2_pre20050312.ebuild,
  gnustep-base-1.10.2.ebuild, gnustep-base-1.10.2-r1.ebuild,
  gnustep-base-1.10.3.ebuild:
  Fixed [<>]=cat/pkg-ver* dependencies.

*gnustep-base-1.10.3 (15 Apr 2005)
*gnustep-base-1.10.2-r1 (15 Apr 2005)
*gnustep-base-1.10.2 (15 Apr 2005)

  15 Apr 2005; Armando Di Cianno <fafhrd@gentoo.org>