@@ -25,14 +25,14 @@ EBUILD gnustep-base-1.10.3.ebuild 2982 RMD160 15cbc420d757b483fedbc536e8d95c5bf8
 MD5 a7d417e457af46cf30362fc30b0c70d7 gnustep-base-1.10.3.ebuild 2982
 RMD160 15cbc420d757b483fedbc536e8d95c5bf8441471 gnustep-base-1.10.3.ebuild 2982
 SHA256 c7c237133b9ce122b020cda7d533e5405035c7cf1d6d01af3adf318a4586bd2b gnustep-base-1.10.3.ebuild 2982
-EBUILD gnustep-base-1.12.0.ebuild 2854 RMD160 a58a30d68a22475a31bd84287bc7b42147963c9c SHA1 84cbf6457ecf75ebf92cd73b0cdf2b428d873320 SHA256 d185b800e05ec1f1d6baec876ee9c404cde13f4e0d246eea07bfaf4847d078ab
-MD5 d03f324c98c9ec59dbac2aa1d6b67c35 gnustep-base-1.12.0.ebuild 2854
-RMD160 a58a30d68a22475a31bd84287bc7b42147963c9c gnustep-base-1.12.0.ebuild 2854
-SHA256 d185b800e05ec1f1d6baec876ee9c404cde13f4e0d246eea07bfaf4847d078ab gnustep-base-1.12.0.ebuild 2854
-MISC ChangeLog 9802 RMD160 42d205736a74ee63739eb62c54ede0a361b86cd5 SHA1 a4d1da7d0fbda9d0815712039e19662144d5d670 SHA256 7f117016eae0bc50f25a26a978802f9212694d8f2bc691cc3e12d39b2b555752
-MD5 6e2bfb260289cbe0beb1c23e270843bc ChangeLog 9802
-RMD160 42d205736a74ee63739eb62c54ede0a361b86cd5 ChangeLog 9802
-SHA256 7f117016eae0bc50f25a26a978802f9212694d8f2bc691cc3e12d39b2b555752 ChangeLog 9802
+EBUILD gnustep-base-1.12.0.ebuild 2843 RMD160 9d8c037a1816fed46ad9927ecd32fdda7c1b3d09 SHA1 0536f403247ca92120ba07e8903581b0e192b6f7 SHA256 5cd5bd80d093073641e490391520be31cbb42aff84d6cba38bf6f51cea1c65ca
+MD5 be298e89e96b2f8d621e8a1d884797af gnustep-base-1.12.0.ebuild 2843
+RMD160 9d8c037a1816fed46ad9927ecd32fdda7c1b3d09 gnustep-base-1.12.0.ebuild 2843
+SHA256 5cd5bd80d093073641e490391520be31cbb42aff84d6cba38bf6f51cea1c65ca gnustep-base-1.12.0.ebuild 2843
+MISC ChangeLog 9975 RMD160 c8304bdb68e23bfa3b270056e637a598e3f8f411 SHA1 3d99eadd8fc39e27a6711594a80b0a2ba8c1f03e SHA256 c91f3672a02b4004b1ec5a2566dd41eb0110691ae46937e68821f752500556fd
+MD5 95b52c1e6f8eec1f5b90cb9679ebd831 ChangeLog 9975
+RMD160 c8304bdb68e23bfa3b270056e637a598e3f8f411 ChangeLog 9975
+SHA256 c91f3672a02b4004b1ec5a2566dd41eb0110691ae46937e68821f752500556fd ChangeLog 9975
 MISC metadata.xml 670 RMD160 5d5b88faf28b66aa5d5d3efd6fe5844e980604c9 SHA1 9582400efd6733f27beaf47fa801065838d86955 SHA256 e08343661cc7ecb6d963be62092a270a45f8af0201c9523d1feeddfa09a417fa
 MD5 6054f8e4a94313852ff8e1294c8abd88 metadata.xml 670
 RMD160 5d5b88faf28b66aa5d5d3efd6fe5844e980604c9 metadata.xml 670
